<resources>
    <string name="app_name">PaperMaxx</string>
    <string name="hello_blank_fragment">Welcome </string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="log_out">Log out</string>
    <string name="repeat_password">Repeat password</string>
    <string name="search_users">search users</string>
    <string name="time">time</string>
    <string name="sign_up">Sign Up</string>
    <string name="online">Online</string>
    <string name="seen">seen</string>
    <string name="title_activity_call">CallActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="accept_call">Accept Call</string>
    <string name="reject_call">Reject Call</string>
    <string name="end_call">End Call</string>
    <string name="subject">subject</string>
    <string name="grade">grade</string>
    <string name="change_full_name">Change full name</string>
    <string name="update_profile">update profile</string>
    <string name="check_if_you_are_a_tutor">Check if you are a tutor</string>
    <string name="confirm_info">Confirm Info</string>
    <string name="not_defined">---</string>
    <string name="select_your_grade">Select your grade</string>
    <string name="select_your_subject">Select your subject</string>
    <string name="submit">Submit</string>
    <string name="complete_info">Complete Info</string>
    <string name="verify_message">Your verify request has been sent and you will be able to work as soon as you were verified</string>
    <string name="enter_your_subject_here">Enter your subject here</string>
    <string name="enter_your_education_place_here">Enter your education place here</string>
    <string name="select_your_question_subject">Select your question subject</string>
    <string name="search_for_tutor">Search for tutor</string>
    <string name="status">Status</string>
    <string name="ready">Ready</string>
    <string name="request_subject_change">Request subject change</string>
    <string name="request_for_subject_change">Request for subject change</string>
    <string name="write_your_message_here">write your message here</string>
    <string name="admin_page">Admin Page</string>
    <string name="verify_tutors">Verify tutors</string>
    <string name="add_subject_or_grade">Add subject or grade</string>
    <string name="tutors_subject_change">Tutors subject change</string>
    <string name="reject">Reject</string>
    <string name="accept">accept</string>
</resources>