<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ui.TutorProfileFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/tutor_profile_gl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/tutor_profile_gl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/tutor_profile_gl_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tutor_profile_username_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/tutor_profile_gl_1"
        app:layout_constraintRight_toLeftOf="@id/tutor_profile_gl_2"
        app:layout_constraintTop_toBottomOf="@id/tutor_profile_gl_3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tutor_profile_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/not_defined"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/tutor_profile_gl_1"
        app:layout_constraintRight_toLeftOf="@id/tutor_profile_gl_2"
        app:layout_constraintTop_toBottomOf="@id/tutor_profile_username_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tutor_subject_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/not_defined"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/tutor_profile_gl_1"
        app:layout_constraintRight_toLeftOf="@id/tutor_profile_gl_2"
        app:layout_constraintTop_toBottomOf="@id/tutor_profile_name_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tutor_btn_subject_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FF5722"
        android:text="@string/request_subject_change"
        app:layout_constraintLeft_toRightOf="@id/tutor_profile_gl_1"
        app:layout_constraintRight_toLeftOf="@id/tutor_profile_gl_2"
        app:layout_constraintTop_toBottomOf="@id/tutor_subject_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tutor_btn_change_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue_700"
        android:text="@string/change_full_name"
        app:layout_constraintLeft_toRightOf="@id/tutor_profile_gl_1"
        app:layout_constraintRight_toLeftOf="@id/tutor_profile_gl_2"
        app:layout_constraintTop_toBottomOf="@id/tutor_btn_subject_change" />

</androidx.constraintlayout.widget.ConstraintLayout>