<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ui.SignUpFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signUp_gl_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signUp_gl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signUp_gl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_et_4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/full_name"
        app:boxStrokeColor="@color/blue_700"
        app:hintTextColor="@color/blue_700"
        app:layout_constraintLeft_toRightOf="@id/signUp_gl_1"
        app:layout_constraintRight_toLeftOf="@id/signUp_gl_2"
        app:layout_constraintTop_toBottomOf="@id/signUp_gl_3"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_et_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/username"
        app:boxStrokeColor="@color/blue_700"
        app:hintTextColor="@color/blue_700"
        app:layout_constraintLeft_toRightOf="@id/signUp_gl_1"
        app:layout_constraintRight_toLeftOf="@id/signUp_gl_2"
        app:layout_constraintTop_toBottomOf="@id/signUp_et_4"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_et_2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        app:boxStrokeColor="@color/blue_700"
        app:hintTextColor="@color/blue_700"
        app:layout_constraintLeft_toRightOf="@id/signUp_gl_1"
        app:layout_constraintRight_toLeftOf="@id/signUp_gl_2"
        app:layout_constraintTop_toBottomOf="@id/signUp_et_1"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_et_3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/repeat_password"
        app:boxStrokeColor="@color/blue_700"
        app:hintTextColor="@color/blue_700"
        app:layout_constraintLeft_toRightOf="@id/signUp_gl_1"
        app:layout_constraintRight_toLeftOf="@id/signUp_gl_2"
        app:layout_constraintTop_toBottomOf="@id/signUp_et_2"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue_500"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@id/signUp_gl_1"
        app:layout_constraintRight_toLeftOf="@id/signUp_gl_2"
        app:layout_constraintTop_toBottomOf="@id/signUp_et_3" />

</androidx.constraintlayout.widget.ConstraintLayout>