<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.ui.TutorVerifyFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verify_gl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verify_gl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verify_gl_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verify_gl_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/verify_message_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="@string/verify_message"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/verify_gl_4"
        app:layout_constraintLeft_toRightOf="@id/verify_gl_1"
        app:layout_constraintRight_toLeftOf="@id/verify_gl_2"
        app:layout_constraintTop_toTopOf="@id/verify_gl_3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verify_subject_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/enter_your_subject_here"
        android:visibility="gone"
        app:boxStrokeColor="@color/blue_500"
        app:hintTextColor="@color/blue_500"
        app:layout_constraintLeft_toRightOf="@id/verify_gl_1"
        app:layout_constraintRight_toLeftOf="@id/verify_gl_2"
        app:layout_constraintTop_toBottomOf="@id/verify_gl_3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verify_education_place_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/enter_your_education_place_here"
        android:visibility="gone"
        app:boxStrokeColor="@color/blue_500"
        app:hintTextColor="@color/blue_500"
        app:layout_constraintLeft_toRightOf="@id/verify_gl_1"
        app:layout_constraintRight_toLeftOf="@id/verify_gl_2"
        app:layout_constraintTop_toBottomOf="@id/verify_subject_et">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verify_tutor"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue_500"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/verify_gl_4"
        app:layout_constraintTop_toBottomOf="@id/verify_education_place_et"
        app:layout_constraintLeft_toRightOf="@id/verify_gl_1"
        app:layout_constraintRight_toLeftOf="@id/verify_gl_2"

        />

</androidx.constraintlayout.widget.ConstraintLayout>